--- a/index.html
+++ b/index.html
@@ -842,6 +842,12 @@
 
         $('#productBtnGroup button').on('click', function() {
             //$('#productInput').val()
+            $('.btn-outline-success').each(function() {
+                $(this).removeClass('btn-outline-success');
+                $(this).addClass('btn-outline-primary');
+            });
+            $(this).removeClass('btn-outline-primary');
+            $(this).addClass('btn-outline-success');
             document.getElementById('curProd').innerHTML = this.value;
             loadLatestFile(
                 'l3',
