--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
+    <!-- https://getbootstrap.com/docs/5.2/components/tooltips/ -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"></script>
+
+    <!-- https://github.com/manuelbieh/geolib -->
+    <script src="https://cdn.jsdelivr.net/npm/geolib@3.3.3/lib/index.min.js"></script>
+
     <style>
         body {
             margin: 0;
@@ -316,7 +322,6 @@
     </script>
     <script src="./polygonTest/demo-radar-script.js"></script> -->
 
-    <script src="https://cdn.jsdelivr.net/npm/geolib@3.3.3/lib/index.min.js"></script>
     <script>
         var parser = document.createElement('a');
         parser.href = window.location.href;
@@ -537,7 +542,7 @@
                     border: 1px solid black;
                     border-radius: 5px;
                     '>
-                        <canvas id="texturecolorbar" class="texturecolorbar"></canvas>
+                        <canvas id="texturecolorbar" class="texturecolorbar" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Default tooltip" data-bs-animation="false"></canvas>
                     </div>`
                 return this._container;
             }
@@ -552,6 +557,10 @@
 
         document.getElementById("texturecolorbar").width = 0;
         document.getElementById("texturecolorbar").height = 0;
+
+        // enable bootstrap tooltips
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
 
         function showPlotBtn() {
             class reflPlotControl {
