--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
         <br>
         <div id="productBtnGroup" class="btn-group-vertical">
             <button type="button" value="ref" class="btn btn-outline-primary btn-sm">Base Reflectivity</button> <!-- ref -->
+            <button type="button" value="hires-ref" class="btn btn-outline-primary btn-sm">Hi-Res Base Reflectivity</button>
             <button type="button" value="vel"  class="btn btn-outline-primary btn-sm">Base Velocity</button> <!-- vel -->
             <button type="button" value="hyc"  class="btn btn-outline-primary btn-sm">Hydrometer Classification</button> <!-- hyc -->
             <button type="button" value="vil"  class="btn btn-outline-primary btn-sm">Vertically Integrated Liquid</button> <!-- vil -->
@@ -456,8 +457,12 @@
 
         function loadFileObject(path, name, level, callback) {
             var radLevel;
+            var wholeOrPart = 'whole';
             if (level == 2) {
                 radLevel = 'level2';
+            } if (level == 22) {
+                radLevel = 'level2';
+                wholeOrPart = 'part';
             } else if (level == 3) {
                 radLevel = 'level3';
             }
@@ -471,7 +476,8 @@
                 // Create the event
                 var event = new CustomEvent("loadFile", { "detail": [
                     blob,
-                    radLevel
+                    radLevel,
+                    wholeOrPart
                 ] });
                 // Dispatch/Trigger/Fire the event
                 document.dispatchEvent(event);
@@ -746,8 +752,9 @@
             var curTime = new Date();
             var year = curTime.getUTCFullYear();
             var month = curTime.getUTCMonth() + 1;
-            month = "0" + month;
+            month = "0" + month.toString();
             var day = curTime.getUTCDate();
+            day = "0" + day.toString();
             var stationToGet = sta.toUpperCase().replace(/ /g, '')
             var fullURL = "https://noaa-nexrad-level2.s3.amazonaws.com/?list-type=2&delimiter=%2F&prefix=" + year + "%2F" + month + "%2F" + day + "%2F" + stationToGet + "%2F"
             //console.log(fullURL)
@@ -766,10 +773,11 @@
 
         function loadLatestFile(levell, pr, tilt, stat) {
             if (levell == 'l2') {
-                getLatestFile($('#userStation').val(), function(fileName, y, m, d, s) {
+                removeMapLayer('baseReflectivity');
+                getLatestFile($('#stationInp').val(), function(fileName, y, m, d, s) {
                     var individualFileURL = `https://noaa-nexrad-level2.s3.amazonaws.com/${y}/${m}/${d}/${s}/${fileName}`
                     console.log(phpProxy + individualFileURL)
-                    loadFileObject(phpProxy + individualFileURL, fileName, 2);
+                    loadFileObject(phpProxy + individualFileURL, fileName, 22);
                 });
             } else if (levell == 'l3') {
                 if ($('#productInput').val() != 'sti') {
@@ -879,12 +887,16 @@
             $(this).removeClass('btn-outline-primary');
             $(this).addClass('btn-outline-success');
             document.getElementById('curProd').innerHTML = this.value;
-            loadLatestFile(
-                'l3',
-                this.value,
-                $('#tiltDropdownBtn').attr('value'),
-                $('#stationInp').val().toLowerCase()
-            );
+            if (this.value != 'hires-ref') {
+                loadLatestFile(
+                    'l3',
+                    this.value,
+                    $('#tiltDropdownBtn').attr('value'),
+                    $('#stationInp').val().toLowerCase()
+                );
+            } else {
+                loadLatestFile('l2');
+            }
         });
         $('#tiltDropdown a').on('click', function() {
             document.getElementById('tiltDropdownBtn').innerHTML = this.innerHTML;
