--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
         </div>
         <br>
         <div id="productBtnGroup" class="btn-group-vertical">
+            <!-- <button type="button" value="mcy" class="btn btn-outline-primary btn-sm">Mesocyclone</button> -->
             <button type="button" value="ref" class="btn btn-outline-primary btn-sm">Base Reflectivity</button> <!-- ref -->
             <button type="button" value="hires-ref" class="btn btn-outline-primary btn-sm">Hi-Res Base Reflectivity</button>
             <button type="button" value="vel"  class="btn btn-outline-primary btn-sm">Base Velocity</button> <!-- vel -->
@@ -725,7 +726,11 @@
                         // KCRP_SDUS54_N0UCRP_201708252357
                         // KOUN_SDUS54_DVLTLX_201305200301
                         // KOUN_SDUS34_NSTTLX_201305200301
-                        var fileToLoad = 'KOUN_SDUS34_NSTTLX_201305200301';
+
+                        // LOT_NMD_2021_06_21_04_22_17
+                        // LOT_NMD_2021_06_21_04_27_31
+                        // ESX_NMD_2022_07_31_21_50_40
+                        var fileToLoad = 'LOT_NMD_2021_06_21_04_22_17';
                         loadFileObject('data/level3/' + fileToLoad, fileToLoad, 3);
                     } else if ($('#testFile3Thing').hasClass('icon-selected')) {
                         $('#testFile3Thing').removeClass('icon-selected');
@@ -840,6 +845,7 @@
                 'srv': '56rm0',
                 'vil': '134il',
                 'sti': '58sti',
+                'mcy': '141md',
             },
             'tilt2': {
                 'ref': 'p94r1',
