added hi-res reflectivity level 3 data

--- a/index.html
+++ b/index.html
@@ -291,13 +291,13 @@
         <br>
         <div id="productBtnGroup" class="btn-group-vertical">
             <!-- <button type="button" value="mcy" class="btn btn-outline-primary btn-sm">Mesocyclone</button> -->
-            <button type="button" value="ref" class="btn btn-outline-primary btn-sm">Base Reflectivity</button> <!-- ref -->
-            <button type="button" value="hires-ref" class="btn btn-outline-primary btn-sm">Hi-Res Base Reflectivity</button>
-            <button type="button" value="vel"  class="btn btn-outline-primary btn-sm">Base Velocity</button> <!-- vel -->
+            <button type="button" value="N0B" class="btn btn-outline-primary btn-sm"><b>HR</b> Base Reflectivity</button>
+            <button type="button" value="vel"  class="btn btn-outline-primary btn-sm"><b>HR</b> Base Velocity</button> <!-- vel -->
             <button type="button" value="hyc"  class="btn btn-outline-primary btn-sm">Hydrometer Classification</button> <!-- hyc -->
-            <button type="button" value="vil"  class="btn btn-outline-primary btn-sm">Vertically Integrated Liquid</button> <!-- vil -->
             <button type="button" value="hhc"  class="btn btn-outline-primary btn-sm">Hybrid Hydrometer Classification</button> <!-- hhc -->
             <button type="button" value="srv"  class="btn btn-outline-primary btn-sm">Storm Relative Velocity</button> <!-- srv -->
+            <button type="button" value="ref" class="btn btn-outline-primary btn-sm">Digital Base Reflectivity</button> <!-- ref -->
+            <button type="button" value="vil"  class="btn btn-outline-primary btn-sm"><b>HR</b> Vertically Integrated Liquid</button> <!-- vil -->
         </div>
     </div>
 
@@ -776,6 +776,31 @@
             })
         }
 
+        function getLatestL3File(sta, pro, cb) {
+            document.getElementById('spinnerParent').style.display = 'block';
+            var curTime = new Date();
+            var year = curTime.getUTCFullYear();
+            var month = curTime.getUTCMonth() + 1;
+            month = "0" + month.toString();
+            var day = curTime.getUTCDate();
+            day = "0" + day.toString();
+            var stationToGet = sta.toUpperCase().replace(/ /g, '')
+            var urlBase = "https://unidata-nexrad-level3.s3.amazonaws.com/";
+            var filenamePrefix = `${sta}_${pro}_${year}_${month}_${day}`;
+            var urlPrefInfo = '?list-type=2&delimiter=/%2F&prefix=';
+            var fullURL = `${urlBase}${urlPrefInfo}${filenamePrefix}`
+            //console.log(fullURL)
+            $.get(phpProxy + fullURL, function (data) {
+                var dataToWorkWith = JSON.stringify(xmlToJson(data)).replace(/#/g, 'HASH')
+                dataToWorkWith = JSON.parse(dataToWorkWith)
+                var contentsBase = dataToWorkWith.ListBucketResult.Contents;
+                var filenameKey = contentsBase[contentsBase.length - 1].Key.HASHtext;
+
+                var finishedURL = `${urlBase}${filenameKey}`;
+                cb(finishedURL);
+            })
+        }
+
         function loadLatestFile(levell, pr, tilt, stat) {
             if (levell == 'l2') {
                 removeMapLayer('baseReflectivity');
@@ -788,13 +813,21 @@
                 if ($('#productInput').val() != 'sti') {
                     removeMapLayer('baseReflectivity');
                 }
-                // https://tgftp.nws.noaa.gov/SL.us008001/DF.of/DC.radar/DS.165h0/SI.kgld/sn.last
-                // DS.165h0 = product code 165, N0H (h0)
-                var tiltProduct = tiltObject[tilt][pr]
-                var level3url = `${phpProxy}https://tgftp.nws.noaa.gov/SL.us008001/DF.of/DC.radar/DS.${tiltProduct}/SI.${stat}/sn.last`
-                console.log(level3url)
-                console.log(tiltProduct, stat)
-                loadFileObject(level3url, 'sn.last', 3);
+                var tiltProduct = tiltObject[tilt][pr];
+                if (pr != 'N0B') {
+                    // https://tgftp.nws.noaa.gov/SL.us008001/DF.of/DC.radar/DS.165h0/SI.kgld/sn.last
+                    // DS.165h0 = product code 165, N0H (h0)
+                    var level3url = `${phpProxy}https://tgftp.nws.noaa.gov/SL.us008001/DF.of/DC.radar/DS.${tiltProduct}/SI.${stat}/sn.last`
+                    console.log(level3url)
+                    console.log(tiltProduct, stat)
+                    loadFileObject(level3url, 'sn.last', 3);
+                } else {
+                    getLatestL3File(stat.toUpperCase().slice(1), tiltProduct, function(cbVal) {
+                        var proxiedCbVal = `${phpProxy}${cbVal}`;
+                        console.log(cbVal);
+                        loadFileObject(proxiedCbVal, 'sn.last', 3);
+                    });
+                }
             }
         }
 
@@ -838,6 +871,7 @@
 
         var tiltObject = {
             'tilt1': {
+                'N0B': 'N0B',
                 'ref': 'p94r0',
                 'vel': 'p99v0',
                 'hhc': '177hh',
@@ -848,6 +882,7 @@
                 'mcy': '141md',
             },
             'tilt2': {
+                'N0B': 'N1B',
                 'ref': 'p94r1',
                 'vel': 'p99v1',
                 'hhc': '177hh',
@@ -857,6 +892,7 @@
                 'sti': '58sti',
             },
             'tilt3': {
+                'N0B': 'N2B',
                 'ref': 'p94r2',
                 'vel': 'p99v2',
                 'hhc': '177hh',
@@ -866,6 +902,7 @@
                 'sti': '58sti',
             },
             'tilt4': {
+                'N0B': 'N3B',
                 'ref': 'p94r3',
                 'vel': 'p99v3',
                 'hhc': '177hh',
@@ -893,16 +930,12 @@
             $(this).removeClass('btn-outline-primary');
             $(this).addClass('btn-outline-success');
             document.getElementById('curProd').innerHTML = this.value;
-            if (this.value != 'hires-ref') {
-                loadLatestFile(
-                    'l3',
-                    this.value,
-                    $('#tiltDropdownBtn').attr('value'),
-                    $('#stationInp').val().toLowerCase()
-                );
-            } else {
-                loadLatestFile('l2');
-            }
+            loadLatestFile(
+                'l3',
+                this.value,
+                $('#tiltDropdownBtn').attr('value'),
+                $('#stationInp').val().toLowerCase()
+            );
         });
         $('#tiltDropdown a').on('click', function() {
             document.getElementById('tiltDropdownBtn').innerHTML = this.innerHTML;
